--- a/package.json
+++ b/package.json
@@ -3,5 +3,11 @@
   "version": "1.0.0",
   "main": "index.js",
   "author": "Chris Brannen <cbrannen@outlook.com>",
-  "license": "MIT"
+  "license": "MIT",
+  "scripts": {
+    "dev": "ntl dev"
+  },
+  "dependencies": {
+    "@netlify/functions": "^1.0.0"
+  }
 }
